tests/neg-custom-args/fatal-warnings/indentLeft.scala
object Test {

  if (true) {
    println("hi")

  println("!")  // error: too far to the left
}
// error: too far to the left